# specpunk

./: .github-account  .gitignore  .mintignore  AGENTS.md  Cargo.toml  README.md  docs.json  go.mod  index.mdx  install.mdx  quickstart.mdx  roadmap.mdx  wrangler.toml
cmd/specpunk/: main.go  main_test.go
concepts/: contracts-runs-proofs.mdx  plot-cut-gate.mdx
crates/punk-adapters/: Cargo.toml
crates/punk-cli/: Cargo.toml
crates/punk-cli/src/: main.rs
crates/punk-core/: Cargo.toml
crates/punk-council/: Cargo.toml
crates/punk-council/src/: anonymize.rs  events.rs  lib.rs  packet.rs  proposal.rs  review.rs  scoring.rs  storage.rs  synthesis.rs
crates/punk-domain/: Cargo.toml
crates/punk-events/: Cargo.toml
crates/punk-gate/: Cargo.toml
crates/punk-gate/src/: lib.rs
crates/punk-orch/: Cargo.toml
crates/punk-orch/src/: lib.rs
crates/punk-orch/tests/fixtures/repo-matrix/: README.md
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-blocked-file-slice-dirty-entrypoint/: Cargo.toml
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-blocked-file-slice-dirty-entrypoint/src/: lib.rs
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-cargo-lock-prune-workspace/: Cargo.toml
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-patch-apply-late-failure-rollback/: .gitignore  Cargo.toml
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-patch-apply-zero-byte-rollback/: Cargo.toml
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-patch-apply-zero-byte-rollback/src/: lib.rs
crates/punk-orch/tests/fixtures/repo-matrix/cut-run-patch-apply-zero-byte-rollback/tests/: cleanup.rs
crates/punk-orch/tests/fixtures/repo-matrix/greenfield-rust-scaffold-doc-noise/.punk/: AGENT_START.md
crates/punk-orch/tests/fixtures/repo-matrix/greenfield-rust-scaffold-doc-noise/.punk/bootstrap/: pubpunk-core.md
crates/punk-orch/tests/fixtures/repo-matrix/greenfield-rust-scaffold-doc-noise/docs/: IMPLEMENTATION_PLAN.md  PUBPUNK_DEVELOPMENT_HANDOFF.md
crates/punk-orch/tests/fixtures/repo-matrix/nested-node-backend-ui-generated-noise/baseline-site/: package.json
crates/punk-orch/tests/fixtures/repo-matrix/nested-node-backend-ui-generated-noise/baseline-site/src/components/: SiteFooter.astro  SiteHeader.astro
crates/punk-orch/tests/fixtures/repo-matrix/nested-node-backend-ui-generated-noise/baseline-site/src/lib/services/: dispatch.ts  enrollments.ts
crates/punk-orch/tests/fixtures/repo-matrix/nested-node-backend-ui-generated-noise/baseline-site/src/lib/session/: cookies.ts  operator.ts
crates/punk-orch/tests/fixtures/repo-matrix/nested-node-backend-ui-generated-noise/baseline-site/src/pages/: dispatch.astro
crates/punk-proof/: Cargo.toml
crates/punk-proof/src/: lib.rs
crates/punk-vcs/: Cargo.toml
crates/specpunk/: Cargo.toml
crates/specpunk/src/: main.rs
docs/product/: ACTION-PLAN.md  ADR-execution-lanes.md  ADR-provider-alignment.md  ARCHITECTURE.md  CLI.md  CONTINUE-PROMPT.md  COUNCIL.md  CURRENT-ROADMAP.md  DOCS-SYSTEM.md  DOGFOODING.md  EVAL.md  HARNESS.md  IMPLEMENTATION-STATUS.md  MASTER-PLAN.md  NORTH-ROADMAP.md  REPO-STATUS.md  RESEARCH.md  ROADMAP-v2.md  SESSION-HANDOFF.md  SKILLS.md  VISION.md  brief.md  current-cycle.md  decisions.md  open-questions.md  pause-handoff-2026-03-14.md  queued-next-tasks.md  roadmap.md
docs/prototypes/: specpunk-public-surface-tokens.css  specpunk-public-surface-v1.html
docs/research/: 2026-03-12-benchmark-methodology-memo.md  2026-03-12-brownfield-benchmark-protocol.md  2026-03-12-buyer-procurement-memo.md  2026-03-12-code-review-bottleneck.md  2026-03-12-code-to-spec-conversion.md  2026-03-12-codespeak-chatgpt-report.md  2026-03-12-codespeak-crosscheck.md  2026-03-12-compliance-operating-model.md  2026-03-12-deep-code-review.md  2026-03-12-deep-code-to-spec.md  2026-03-12-deep-intent-preservation.md  2026-03-12-deep-nextgen-langs.md  2026-03-12-deep-nl-consistency.md  2026-03-12-deep-spec-driven-dev.md  2026-03-12-delve-deterministic-inference.md  2026-03-12-delve-dora-paradox.md  2026-03-12-delve-sdd-slowdown.md  2026-03-12-delve-spec-extraction-gap.md  2026-03-12-delve-thinking-blocks.md  2026-03-12-intent-preservation.md  2026-03-12-llm-as-library-nextgen-langs.md  2026-03-12-next-step-product-thesis.md  2026-03-12-nl-consistency-checking.md  2026-03-12-public-surface-brief.md  2026-03-12-public-surface-concepts.md  (+32 more)
punk/: Cargo.toml  README.md
punk/punk-cli/: Cargo.toml
punk/punk-cli/src/: main.rs
punk/punk-core/: Cargo.toml
punk/punk-core/src/: config.rs  lib.rs  vcs.rs
punk/punk-core/src/audit/: mod.rs
punk/punk-core/src/check/: mod.rs
punk/punk-core/src/cleanup/: mod.rs
punk/punk-core/src/coupling/: mod.rs
punk/punk-core/src/critique/: mod.rs
punk/punk-core/src/depcheck/: mod.rs
punk/punk-core/src/dsl/: mod.rs
punk/punk-core/src/explain/: mod.rs
punk/punk-core/src/holdout/: mod.rs
punk/punk-core/src/init/: artifacts.rs  greenfield.rs  mod.rs  scan.rs
punk/punk-core/src/mechanic/: mod.rs
punk/punk-core/src/pack/: mod.rs
punk/punk-core/src/plan/: ceremony.rs  complexity.rs  context.rs  contract.rs  llm.rs  mod.rs  quality.rs  render.rs
punk/punk-core/src/policy/: mod.rs
punk/punk-core/src/recall/: mod.rs
punk/punk-core/src/receipt/: mod.rs
punk/punk-core/src/repair/: mod.rs
punk/punk-core/src/risk/: mod.rs
punk/punk-core/src/scan/: mod.rs
punk/punk-core/src/session/: mod.rs
punk/punk-core/src/supersede/: mod.rs
punk/punk-core/src/testquality/: mod.rs
punk/punk-orch/: Cargo.toml
punk/punk-orch/src/: adapter.rs  benchmark.rs  budget.rs  bus.rs  config.rs  context.rs  daemon.rs  diverge.rs  doctor.rs  eval.rs  followup.rs  goal.rs  graph.rs  lib.rs  morning.rs  ops.rs  panel.rs  pipeline.rs  queue.rs  ratchet.rs  recall.rs  receipt.rs  research.rs  resolver.rs  run.rs  sanitize.rs  session.rs  skill.rs  task.rs  triage.rs
punk/punk-run/: Cargo.toml
punk/punk-run/src/: main.rs
reference/: architecture.mdx  cli.mdx  repo-status.mdx
site/: _headers  index.html  package-lock.json  package.json  style.css  styles.css
tools/: specpunk_review.py
(+120 files in other folders)
