[workspace]
members = [
  "crates/punk-cli",
  "crates/punk-domain",
  "crates/punk-council",
  "crates/punk-events",
  "crates/punk-core",
  "crates/punk-vcs",
  "crates/punk-orch",
  "crates/punk-gate",
  "crates/punk-proof",
  "crates/punk-adapters",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
