[workspace]
# Status vocabulary for this manifest:
# - active_v0_surface: workspace member and part of today's operator/runtime surface
# - in_tree_inactive: workspace member kept buildable in-tree, but not part of the active v0 operator path
# - planned_only: target-shape crate not present in today's workspace membership
members = [
  # active_v0_surface
  "crates/specpunk",
  "crates/punk-domain",
  "crates/punk-events",
  "crates/punk-core",
  "crates/punk-vcs",
  "crates/punk-orch",
  "crates/punk-gate",
  "crates/punk-proof",
  "crates/punk-adapters",
  # in_tree_inactive (Stage 2+ advisory council surface, not active v0 operator path)
  "crates/punk-council",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
