[package]
name = "punk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "punk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
punk-adapters = { path = "../punk-adapters" }
punk-gate = { path = "../punk-gate" }
punk-orch = { path = "../punk-orch" }
punk-proof = { path = "../punk-proof" }
