[package]
name = "punk-orch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
punk-domain = { path = "../punk-domain" }
punk-events = { path = "../punk-events" }
punk-core = { path = "../punk-core" }
punk-vcs = { path = "../punk-vcs" }
punk-adapters = { path = "../punk-adapters" }
