[package]
name = "punk-proof"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
punk-domain = { path = "../punk-domain" }
punk-events = { path = "../punk-events" }
punk-orch = { path = "../punk-orch" }
