[package]
name = "specpunk"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "punk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
punk-adapters = { path = "../punk-adapters" }
punk-gate = { path = "../punk-gate" }
punk-domain = { path = "../punk-domain" }
punk-orch = { path = "../punk-orch" }
punk-proof = { path = "../punk-proof" }
punk-vcs = { path = "../punk-vcs" }
