[package]
name = "punk-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for punk — spec-driven development toolkit"
license = "MIT"

[[bin]]
name = "punk"
path = "src/main.rs"

[dependencies]
punk-core = { path = "../punk-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
