[package]
name = "punk-core"
version = "0.1.0"
edition = "2021"
description = "Core library for punk — spec-driven development toolkit"
license = "MIT"

[dependencies]
walkdir = "2.5.0"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3.27.0"
