[package]
name = "punk-orch"
version = "0.1.0"
edition = "2021"
description = "Orchestration library for specpunk — agent dispatch, receipts, policy"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
dirs = "6.0.0"
libc = "0.2"
regex = "1.12"
thiserror = "2.0.18"
toml = "0.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "process", "signal", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
